removing text/css

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
   		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   		<!-- Style -->
-  		<link href='../public/style.css' rel='stylesheet' type='text/css'>
+  		<link href='../public/style.css' rel='stylesheet'>
   
   		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
