--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,7 @@
 		
 		<!-- START SECTION -->
   		<div class="section hero text-center background-dark dark-bg">
-  			<div class="background-image" style="background-image: url('../public/images/hero.jpg') no-repeat center center; background-size: cover; opacity: .2;"></div>
+  			<div class="background-image" style="background-image: url('images/hero.jpg') no-repeat center center; background-size: cover; opacity: .2;"></div>
   			<div class="container">
   				<div class="row">
   					<div class="col-md-12">
@@ -114,7 +114,7 @@
 
   		<!-- START SECTION -->
   		<div class="section hero text-center background-primary dark-bg">
-  			<div class="background-image" style="background-image: url('../public/images/hero.jpg') no-repeat fixed center center; background-size: cover; opacity: .2;"></div>
+  			<div class="background-image" style="background-image: url('images/hero.jpg') no-repeat fixed center center; background-size: cover; opacity: .2;"></div>
   			<div class="container">
   				<div class="row">
   					<div class="col-md-12">
@@ -179,7 +179,7 @@
 
   		<!-- START SECTION -->
   		<div class="section hero text-center background-light">
-  			<div class="background-image" style="background-image: url('../public/images/hero.jpg') no-repeat fixed center center; background-size: cover; opacity: .2;"></div>
+  			<div class="background-image" style="background-image: url('images/hero.jpg') no-repeat fixed center center; background-size: cover; opacity: .2;"></div>
   			<div class="container">
   				<div class="row">
   					<div class="col-md-12">
