try background-image url

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Poppins', sans-serif;
 	color: #2c3e50;
-/*	background-image: url('../images/hero1.jpg');*/
+	background-image: url('../images/hero.jpg');
 }
 
 a {
